<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_english"
        app:layout_constraintTop_toBottomOf="@+id/text_english">

        <TextView
            android:id="@+id/text_first_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_first_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_first_language" />

        <RelativeLayout
            android:id="@+id/buttons_change_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edit_first_language">

            <Button
                android:id="@+id/change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language" />

            <Button
                android:id="@+id/translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="Translate" />
        </RelativeLayout>

        <TextView
            android:id="@+id/text_second_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstLang"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/buttons_change_translate"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edit_second_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_second_language" />
        
        <ListView
            android:id="@+id/list_of_translated_words"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_second_language"/>

        <Button
            android:id="@+id/add_to_dict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_dictionary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_of_translated_words"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_translated_by_yandex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translated_by_yandex"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/add_to_dict"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/profile_settings"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/text_translated_by_yandex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/profile_pro"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="Profile Pro"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/profile_prof"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="Profile Prof"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_pro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/creating_by_ubc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:text="Copyright © UBC Inc., 2021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_prof"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>